* Fixed offline first issue with trending coins. * Update Market Rank API * Some UI improvement